Rename follow_up_schedule and follow_up
- Follow up schedule is renamed to appointment
- Follow up is renamed to communication
- user_action is renamed to status
- appointment no longer has action_by_user_id
- update enums for appointments and communications
