# app/models/patient.rb
@@ -10,7 +10,7 @@ class Patient < ApplicationRecord
   has_many :prescription_drugs
   has_many :facilities, through: :blood_pressures
 
-  has_many :follow_up_schedules
+  has_many :appointments
 
   validate :past_date_of_birth
 
